<resources>
    <string name="app_name">NonochanomApp</string>
    <string name="ร้านโนโน่_ชานมไข่มุก">NONO Bubble Tea Shop</string>
    <string name="nono_bubble_tea_shop">NONO BUBBLE TEA SHOP</string>
    <string name="เข้าสู่ระบบ">Login</string>
    <string name="sign_up">SIGN UP</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="number">Phone Number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account? Login</string>
    <string name="create_account">Create Account</string>
    <string name="login">LOGIN</string>
    <string name="username_login">Username</string>
    <string name="password_login">Password</string>
    <string name="no_account_yet">No account yet? Sign up</string>
    <string name="login_button">LOGIN</string>
    <string name="thai_flag_icon">Thai Flag Icon</string>
    <string name="nonolnwza">nonolnwza</string>
    <string name="nongnono56_gmail_com">nongnono56@gmail.com</string>
    <string name="phonenumber">Phone Number</string>
    <string name="_0825169999">0825169999</string>
    <string name="loguot">Logout</string>
    <string name="profileicon">Profile Icon</string>
    <string name="userinfohead">User Information</string>
    <string name="labelswtichlang">Choose Language</string>
    <string name="english">English</string>
    <string name="thai">Thai</string>
    <string name="menu">Menu</string>
    <string name="homeicontool">Home Icon</string>
    <string name="history">History</string>
    <string name="usericontool">User Icon</string>
    <string name="cocoa">Cocoa</string>
    <string name="price">40 Baht</string>
    <string name="historyhead">Order History</string>
    <string name="menu_cocoa_size_small">Menu: Cocoa Size: Small</string>
    <string name="toppings_jelly">Toppings: Jelly</string>
    <string name="order">Order</string>
    <string name="datetime">Date Time</string>
    <string name="tpt">Toppings</string>
    <string name="back">Back</string>
    <string name="cocoa_drink">Cocoa Drink</string>
    <string name="น้ำโกโก้">Cocoa Drink</string>
    <string name="สามารถเลือกรูปเเบบได้">You can choose the style</string>
    <string name="ขนาดแก้ว">Cup Size</string>
    <string name="กรุณาเลือก1ข้อ">Please select 1 option</string>
    <string name="แก้วเล็ก">Small Cup</string>
    <string name="_10">10 Baht</string>
    <string name="line">__________________________________________________________________________________</string>
    <string name="กดสั่งซื้อ">Order Now</string>
    <string name="เพิ่มเติม">Additional Notes</string>
    <string name="เพิ่มเยลลี่">Add Jelly</string>
    <string name="เพิ่มไข่มุก">Add Bubble</string>
    <string name="_1">Select maximum 1 option</string>
    <string name="ท็อปปิ้ง">Toppings</string>
    <string name="_35">35 Baht</string>
    <string name="แก้วใหญ่">Large Cup</string>
    <string name="_20">20 Baht</string>
    <string name="แก้วกลาง">Medium Cup</string>
    <string name="sign_in_of_login">Sign up</string>
    <string name="กรุณาระบุข้อมูลเพิ่มเติม">Please specify additional information</string>
    <string name="น้ำมะพร้าว">Coconut Water</string>
    <string name="coconut">Coconut</string>
    <string name="menu_eng">Menu</string>
</resources>