<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/main"
    tools:context=".MenuActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <!-- Logo -->
        <TextView
            android:id="@+id/head"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/historyhead"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/icon_flag"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <!-- Title -->

        <!-- Flag (Language Switch) -->
        <ImageView
            android:id="@+id/icon_flag"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/thai_flag_icon"
            android:src="@drawable/ic_thailand"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Search -->
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/bottom_nav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_bar" />

    <LinearLayout
        android:id="@+id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/nav_home"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="60dp"
            android:contentDescription="@string/homeicontool"
            android:src="@drawable/home" />

        <ImageView
            android:id="@+id/nav_history"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/history"
            android:src="@drawable/history" />

        <ImageView
            android:id="@+id/nav_user"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="60dp"
            android:contentDescription="@string/usericontool"
            android:src="@drawable/user" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>