<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pink_bg"
    tools:context=".UserinfoActivity">

    <!-- Top Bar -->


    <!-- Profile Card -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <!-- Logo -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/userinfohead"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <!-- Title -->

        <!-- Flag (Language Switch) -->
        <ImageView
            android:id="@+id/icon_flag"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/thai_flag_icon"
            android:src="@drawable/ic_thailand"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Search -->
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/profile_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="6dp"
        android:backgroundTint="@android:color/white"
        tools:ignore="MissingConstraints">

    </com.google.android.material.card.MaterialCardView>



    <!-- Bottom Navigation -->
    <LinearLayout
        android:id="@+id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/nav_home"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="60dp"
            android:contentDescription="homeicontool"
            android:src="@drawable/home"/>

        <ImageView
            android:id="@+id/nav_history"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="history"
            android:src="@drawable/history"/>

        <ImageView
            android:id="@+id/nav_user"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="60dp"
            android:contentDescription="usericontool"
            android:src="@drawable/user"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/rounded_bg"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_nav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_bar"
        app:layout_constraintVertical_bias="1.0">

        <!-- Profile Image -->
        <ImageView
            android:id="@+id/profile_icon"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/profileicon"
            android:padding="20dp"
            android:src="@drawable/user" />

        <!-- Display Name -->
        <TextView
            android:id="@+id/profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@color/white"
            android:padding="10dp"
            android:text="@string/nonolnwza"
            android:textColor="#333333"
            android:textSize="30sp"
            android:textStyle="bold" />

        <!-- Username -->

        <!-- Divider -->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginVertical="16dp"
            android:background="@color/black" />

        <!-- Email -->

        <!-- Phone -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@color/white"
                android:padding="5dp"
                android:text="@string/email"
                android:textSize="20sp"
                android:textStyle="bold"
                android:tint="#FF4081" />

            <TextView
                android:id="@+id/profile_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:padding="5dp"
                android:text="@string/nongnono56_gmail_com"
                android:textColor="#444444"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@color/white"
                android:padding="5dp"
                android:text="@string/phonenumber"
                android:textSize="20sp"
                android:textStyle="bold"
                android:tint="#FF4081" />

            <TextView
                android:id="@+id/profile_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:padding="5dp"
                android:text="@string/_0825169999"
                android:textColor="#444444"
                android:textSize="25sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/logout_user"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/loguot"
            android:textSize="20sp"
            android:textStyle="bold" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
